@@ -3664,6 +3664,43 @@ AT_CHECK([./prog], [0])
 AT_CLEANUP
 
 
+AT_SETUP([FORMATTED-(DATE)TIME with SYSTEM-OFFSET])
+AT_KEYWORDS([functions FORMATTED-TIME FORMATTED-DATETIME extensions])
+
+AT_SKIP_IF([test $COB_HAS_UTC_OFFSET = "no"])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION  DIVISION.
+       PROGRAM-ID.     prog.
+       DATA            DIVISION.
+       WORKING-STORAGE SECTION.
+       01  str         PIC X(30).
+
+       PROCEDURE DIVISION.
+           MOVE FUNCTION FORMATTED-DATETIME
+                    ("YYYYDDDThhmmss+hhmm", 1, 45296, SYSTEM-OFFSET)
+               TO str
+           IF FUNCTION TEST-FORMATTED-DATETIME
+                   ("YYYYDDDThhmmss+hhmm", str) <> 0
+               DISPLAY "Test 1 failed: " str END-DISPLAY
+           END-IF
+
+           MOVE FUNCTION FORMATTED-TIME
+                    ("hhmmss.ssZ", 45296, SYSTEM-OFFSET)
+               TO str
+           IF FUNCTION TEST-FORMATTED-DATETIME
+                   ("hhmmss.ssZ", str) <> 0
+               DISPLAY "Test 2 failed: " str END-DISPLAY
+           END-IF
+           .
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([./prog], [0])
+
+AT_CLEANUP
+
+
 AT_SETUP([Intrinsics without FUNCTION keyword (1)])
 AT_KEYWORDS([functions])
 
@@ -3757,5 +3794,3 @@ AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([./prog], [0])
 
 AT_CLEANUP
-
-
